# catar

./: LICENSE  README.md  cache_dialog.py  cache_utils.py  config.py  core.py  genetic.py  gui.py  main.py  plotting.py  pyproject.toml  requirements.txt  run.py  state.py  utils.py  video_cache.py  viz_3d.py  workers.py
core/: __init__.py  annotation.py  genetic_algorithm.py  refinement.py  tracking.py  tracking_and_annotations.py
gui/: __init__.py  annotations_callbacks.py  calibration_callbacks.py  callbacks.py  layout.py  popups.py  rendering.py  viewer_3d.py
gui/callbacks/: __init__.py  annotation.py  calibration_callbacks.py  general.py  playback_callbacks.py  tracking.py
gui/handlers/: __init__.py  keyboard.py  mouse.py
old/: run.py  viz_3d.py
state/: __init__.py  app_state.py  calibration_state.py  data_manager.py
video/: __init__.py  backends.py  disk_cache.py  readers.py
workers/: __init__.py  calibration_worker.py  calibration_workers.py  rendering.py  rendering_worker.py  rendering_workers.py  tracking.py  tracking_worker.py  tracking_workers.py  video_readers.py
