[project]
name = "catar"
version = "0.5.0"
description = "Lucas-Kanade algorithm-based pose tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.1.0",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.2",
    "segment-anything>=1.0",
    "toml>=0.10.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
